<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="tvApSsidTitle">SSID: </string>
    <string name="tvPasswordTitle">Password: </string>
    <string name="switchIsSsidHiddenTitle">SSID is Hidden</string>
    <string name="spinnerTaskResultCountTitle">Task result count</string>
    <string name="btnConfirmTitle">Confirm</string>
    <string name="app_name">Livixa</string>
    <string name="version_code">Version code</string>
    <string name="version_code1">Internal version</string>
    <string name="soft_name">Software name</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Cancel</string>
    <string name="exit_alert">Are you sure you want to exit?</string>
    <string name="list_option">Option</string>
    <string name="connecting">Loading....</string>
    <string name="init_network_error">Network initial failed</string>
    <string name="send_error">Sending failed</string>
    <string name="recv_error">Receiving failed</string>
    <string name="more_about_disclaimer">Declarement</string>
    <string name="more_about_version">Version</string>
    <string name="more_about_contact">Contact</string>
    <string name="disclaimer_conent">"Copyright 2013, Btrend."</string>
    <string name="version_conent">V 0.0.0.1</string>
    <string name="contact_me">"Website : http://www.ivisioncam.com   Support:support@btrend.com</string>
    <string name="input_camera_all_include">The camera already exists</string>
    <string name="pwd_no_empty">The password cannot be empty</string>
    <string name="app_running">Running</string>
    <string name="show_t_xxx">Please tap the button on the left to start the function</string>
    <string name="str_version">Version</string>
    <string name="preset_show">Preset</string>
    <string name="delete_camera">Delete</string>
    <string name="del_alert">Are you sure you want to delete it?</string>
    <string name="str_add">Add</string>
    <string name="str_about">About</string>
    <string name="connect_failed">Connection failed</string>
    <string name="unknow_error">Unknown error</string>
    <string name="string_about">About</string>
    <string name="camera_type">Camera Type</string>
    <string name="device_id_name">ID:</string>
    <string name="device_type_name">Type:</string>
    <string name="device_status_name">Status:</string>
    <string name="pppp_status_unknown">Unknown</string>
    <string name="pppp_status_connecting">Connecting</string>
    <string name="pppp_status_initialing">Connected, initialing</string>
    <string name="pppp_status_online">Online</string>
    <string name="pppp_status_disconnect">Disconnected</string>
    <string name="pppp_status_connect_failed">Connection failed</string>
    <string name="pppp_status_invalid_id">ID is invalid</string>
    <string name="pppp_dev_type_unknown">Unknown type</string>
    <string name="device_not_on_line">Offline</string>
    <string name="pppp_mode">Mode:</string>
    <string name="pppp_mode_p2p_normal">P2P</string>
    <string name="pppp_mode_p2p_relay">Relay</string>
    <string name="pppp_mode_unknown">Unknown</string>
    <string name="pppp_status_connect_timeout">Connection timeout</string>
    <string name="password">@string/UserPassHint</string>
    <string name="showpwd">Show password</string>
    <string name="connected">Connected</string>
    <string name="camera_not_online">Camera is offline</string>
    <string name="back">@string/Back</string>
    <string name="done">@string/Donee</string>
    <string name="main_select_all">Select all</string>
    <string name="main_select_reverse">Reverse select</string>
    <string name="main_edit">Edit</string>
    <string name="main_check">Check</string>
    <string name="main_vidicon">Camera</string>
    <string name="main_alarm_event">Event</string>
    <string name="main_pic">Photo</string>
    <string name="main_vid">Video</string>
    <string name="main_vid1">Videos</string>
    <string name="main_remote">Remote</string>
    <string name="main_phone"> Client </string>
    <string name="main_setting_prompt">Cannot setup offline camera</string>
    <string name="exit">Exit</string>
    <string name="main_alarm">Event</string>
    <string name="main_more">More</string>
    <string name="main_plea_addcam">Add camera first</string>
    <string name="main_not_administrator">User authentication failed</string>
    <string name="main_show_back">Tap again and run in the backgound </string>
    <string name="four_show_back">Tap again and exit from four icon steaming display.</string>
    <string name="add_camera">Add Camera</string>
    <string name="edit_camera">Edit</string>
    <string name="camera_name">Name</string>
    <string name="camera_addr">IP address</string>
    <string name="camera_port">Port</string>
    <string name="camera_user">Username</string>
    <string name="camera_pwd">Password</string>
    <string name="input_camera_name">Please input camera  name </string>
    <string name="input_camera_addr">Please input the IP address </string>
    <string name="input_camera_port">Please input the port </string>
    <string name="input_camera_user">Please input the username </string>
    <string name="edit">Edit</string>
    <string name="camera_id">Cam ID</string>
    <string name="input_camera_id">Please input the camera ID</string>
    <string name="scan_cameraid">Scan</string>
    <string name="scan_cameraid_fail">Scan failed, please try again</string>
    <string name="add_search_result">Search results</string>
    <string name="add_search_no">Search failed, please try again.</string>
    <string name="add_twodimensioncode">Starting QR code program…</string>
    <string name="add_camer_no_add">The number of screens have already reached maximum!</string>
    <string name="search_camera">Search Camera</string>
    <string name="searching_tip">Searching, please wait…</string>
    <string name="str_search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="setting">Setting</string>
    <string name="setting_camera">Camera</string>
    <string name="setting_wifi">WiFi</string>
    <string name="setting_user">User</string>
    <string name="setting_ftp">FTP</string>
    <string name="setting_alerm">Alarm</string>
    <string name="setting_time">Time</string>
    <string name="setting_sdcard">Record</string>
    <string name="setting_mail">Email</string>
    <string name="setting_ap">AP setting</string>
    <string name="setting_ap_ssid">SSID：</string>
    <string name="setting_ap_pwd">Password：</string>
    <string name="setting_ap_show">SSID or password can not be empty</string>
    <string name="wifi">@string/WifiSetting</string>
    <string name="wifi_manager">Wireless Access points</string>
    <string name="wifi_channel">Channel:</string>
    <string name="wifi_channel_show">The channel number can not be empty</string>
    <string name="wifi_signal_strong">Wifi signal</string>
    <string name="wifi_safe">Wifi security</string>
    <string name="wifi_no_safe">No</string>
    <string name="wifi_set_failed">@string/wifisetfail</string>
    <string name="wifi_set_success">@string/wifisetsucc</string>
    <string name="wifi_not_connected">Wifi not connected</string>
    <string name="wifi_scan_failed">Wifi scan failed</string>
    <string name="wifi_getparams">@string/Loading</string>
    <string name="wifi_getparams_failed">Failed to get Wifi parameters</string>
    <string name="wifi_notchange">Unnecessary to change the wifi setting</string>
    <string name="wifi_pwd_toolong">The password cannot be longer than 128 characters</string>
    <string name="user_admin">Administrator</string>
    <string name="user_operator">Operator</string>
    <string name="user_visitor">Visitor</string>
    <string name="user_setting">User</string>
    <string name="user_set_failed">User setting failed</string>
    <string name="user_set_success">User setting succeeded, camera will be restarted</string>
    <string name="user_name_no_empty">The user name cannot be empty</string>
    <string name="user_name">User:</string>
    <string name="user_getparams">@string/Loading</string>
    <string name="user_getparams_failed">Failed to get user information</string>
    <string name="user_name_toolong">The username cannot be longer than 128 characters</string>
    <string name="user_pwd_toolong">The password cannot be longer than 128 characters</string>
    <string name="date_device_time">Device time</string>
    <string name="date_device_timezone">Timezone</string>
    <string name="date_ntp_server_auto_check">Use NTP provided values</string>
    <string name="date_phone_time_auto_check">Sync from phone time</string>
    <string name="date_ntp_server">NTP server</string>
    <string name="date_middle_island">@string/datetimeZone0</string>
    <string name="date_hawaii">@string/datetimeZone1</string>
    <string name="date_alaska">@string/datetimeZone2</string>
    <string name="date_pacific_time">@string/datetimeZone3</string>
    <string name="date_mountain_time">@string/datetimeZone4</string>
    <string name="date_middle_part_time">@string/datetimeZone5</string>
    <string name="date_eastern_time">@string/datetimeZone6</string>
    <string name="date_ocean_time">@string/datetimeZone7</string>
    <string name="date_newfoundland">@string/datetimeZone8</string>
    <string name="date_brasilia">@string/datetimeZone9</string>
    <string name="date_center_ocean">@string/datetimeZone10</string>
    <string name="date_cape_verde_island">@string/datetimeZone11</string>
    <string name="date_greenwich">@string/datetimeZone12</string>
    <string name="date_brussels">@string/datetimeZone13</string>
    <string name="date_athens">@string/datetimeZone14</string>
    <string name="date_nairobi">@string/datetimeZone15</string>
    <string name="date_teheran">@string/datetimeZone16</string>
    <string name="date_baku">@string/datetimeZone17</string>
    <string name="date_kebuer">@string/datetimeZone18</string>
    <string name="date_islamabad">@string/datetimeZone19</string>
    <string name="date_calcutta">@string/datetimeZone20</string>
    <string name="date_alamotu">@string/datetimeZone21</string>
    <string name="date_bangkok">@string/datetimeZone22</string>
    <string name="date_beijing">@string/datetimeZone23</string>
    <string name="date_seoul">@string/datetimeZone24</string>
    <string name="date_darwin">@string/datetimeZone25</string>
    <string name="date_guam">@string/datetimeZone26</string>
    <string name="date_suolumen">@string/datetimeZone27</string>
    <string name="date_auckland">@string/datetimeZone28</string>
    <string name="date_ntp_server_time_nist_gov">time.nist.gov</string>
    <string name="date_ntp_server_time_kriss_re_kr">time.kriss.re.kr</string>
    <string name="date_ntp_server_time_windows_com">time.windows.com</string>
    <string name="date_ntp_server_time_nuri_net">time.nuri.net</string>
    <string name="date_setting_success">Device time setting succeeded.</string>
    <string name="date_setting_failed">Device time setting failed</string>
    <string name="date_get_params">@string/Loading</string>
    <string name="local_picture">Photo</string>
    <string name="set_aler_new_1">Alarm switch</string>
    <string name="set_aler_new_2">On</string>
    <string name="set_aler_new_3">Off</string>
    <string name="biz_main_wifi">A key configuration wifi</string>
    <string name="wifi_address">Address</string>
    <string name="auth_mode">Mode</string>
    <string name="allocation_wifi_pwdshow">Show the password</string>
    <string name="configuration">Configuration </string>
    <string name="allocation_wifi_done">done</string>
    <string name="frequency_setting">Frequency Setting</string>
    <string name="frequency_50">50Hz</string>
    <string name="frequency_60">60Hz</string>
    <string name="about_company">Company</string>
    <string name="about_website">WebSite</string>
</resources>