<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginBottom="5dp"
        android:background="#99ffffff"
        android:gravity="center"
        android:text="@string/frequency_setting"
        android:textColor="@color/color_blue"
        android:textSize="14dp" 
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_fq_50"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_selector"
        android:text="@string/frequency_50"
        android:textColor="#000000"
        android:textSize="14dp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/button_fq_60"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_selector"
        android:text="@string/frequency_60"
        android:textColor="#000000"
        android:textSize="14dp"
        android:textStyle="bold" />

</LinearLayout>