<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginBottom="5dp"
        android:background="#99ffffff"
        android:gravity="center"
        android:text="@string/set_aler_new_1"
        android:textColor="@color/color_blue"
        android:textSize="16dp" />

    <Button
        android:id="@+id/button_alerm_on"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_selector"
        android:singleLine="true"
        android:text="@string/set_aler_new_2"
        android:textColor="#000000"
        android:textSize="14dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_alerm_off"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_selector"
        android:text="@string/set_aler_new_3"
        android:textColor="#000000"
        android:textSize="14dp"
        android:textStyle="bold" />

</LinearLayout>