<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_all"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/top_bg_style"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5.0dip"
            android:shadowColor="@color/color_shadow"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:text="@string/string_about"
            android:textColor="@color/color_white"
            android:textSize="18.0sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:padding="10.0dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingBottom="15.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/about_title_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/soft_name" />

                <TextView
                    style="@style/about_content_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:orientation="vertical" >

                <TextView
                    style="@style/about_title_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/version_code" />

                <TextView
                    android:id="@+id/softversion"
                    style="@style/about_content_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="1.0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:orientation="vertical" >

                <TextView
                    style="@style/about_title_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_company" />

                <TextView
                    android:id="@+id/softversion_self"
                    style="@style/about_content_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Apacomint Ltda." />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:orientation="vertical" >

                <TextView
                    style="@style/about_title_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_website" />

                <TextView
                    android:id="@+id/about_website"
                    style="@style/about_content_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="www.apacom.cl" />
            </LinearLayout>
            </LinearLayout>
    </ScrollView>

</LinearLayout>