<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_all" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1" >

        <RelativeLayout
            android:id="@+id/allocaltion_top"
            style="@style/top_bg_style"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/allocaltion_back"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_selector_common"
                android:text="@string/back"
                android:textColor="@color/color_black"
                android:textSize="@dimen/text_title_size" />

            <TextView
                android:id="@+id/allocation_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:shadowColor="@color/color_shadow"
                android:shadowDx="1.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:text="@string/biz_main_wifi"
                android:textColor="@color/color_white"
                android:textSize="18.0sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/allocation_notice"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:textColor="#000"
            android:textSize="12sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/background_whitef10_corner"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/wifi_address"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_title_size" />

                <EditText
                    android:id="@+id/allocation_wifiName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/edit_bg"
                    android:maxLength="20"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" 
                android:visibility="gone">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/auth_mode"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_title_size" />

                <EditText
                    android:id="@+id/allocation_authmode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_bg"
                    android:maxLength="32"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/password"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_title_size" />

                <EditText
                    android:id="@+id/allocation_wifiPwd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/edit_bg"
                    android:password="true"
                    android:singleLine="true" >
                </EditText>
            </LinearLayout>
            

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="Custom"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/text_title_size" />

                <EditText
                    android:id="@+id/allocation_custom"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/edit_bg"
                    android:singleLine="true" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/allocation_wifi_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/allocation_wifi_pwdshow"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/allocation_startV1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/corner_select"
                android:text="Send V1"
                android:visibility="gone" />

            <Button
                android:id="@+id/allocation_startV4"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/corner_select"
                android:text="@string/configuration" />

            <Button
                android:id="@+id/allocation_startV1V4"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/corner_select"
                android:text="Send Both"
                android:visibility="gone" />

            <Button
                android:id="@+id/allocation_done"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/corner_select"
                android:text="@string/allocation_wifi_done" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>